--- a/IEEE_Alvaro.tex
+++ b/IEEE_Alvaro.tex
@@ -191,7 +191,7 @@ During exploratory data analysis we found that, from the point of view of travel
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\linewidth]{new_flow.png}
+	\includegraphics[width=\linewidth]{new_flow2.png}
 	\caption{Schematic of data streams in the algorithm.}
 	\label{fig:flowchart}
 \end{figure}
@@ -262,9 +262,9 @@ Seasonal-Trend Decomposition based on LOESS (STL) \cite{STL} was chosen for the 
 Below, the sequence of steps taken to extract the Seasonality Components that can be observed in Fig. \ref{fig:acf} is described in line with Fig. \ref{fig:flowchart}. 
 Note that this should be applied to the $n$ training weeks as a single time series.
 \begin{enumerate}
-	\item STL Decomposition of Background for daily seasonality
+	\item Decomposition of Background for daily seasonality
 	\item Extract and sum the series corresponding Trend and Remainder from Step 1
-	\item STL Decomposition of output from 2 for weekly seasonality
+	\item Decomposition of output from 2 for weekly seasonality
 	\item Add daily and weekly Seasonal components from Step 1 and Step 3 to obtain global seasonality
 	\item Average seasonality across training weeks
 	\item Linearise Trend term from output of Step 3
@@ -442,16 +442,15 @@ A. C. E. thanks Stefan Grosskinsky for the initial guidance, discussions and sup
 \bibitem{STL} R. B. Cleveland, W. S. Cleveland, J. E. McRae and I. Terpenning, "STL: A Seasonal-Trend Decomposition Procedure Based on Loess", Journal of Official Statistics, vol. 6, 1990, pp. 3-73.
 \bibitem{forecasting} R. J. Hyndman and G. Athanasopoulos, "Forecasting: Principles and Practice", Otexts, 2013.
 \bibitem{FFT} J. W. Cooley and J. W. Tukey, "An algorithm for the machine calculation of complex Fourier series", Mathematics of computation, 1965, vol. 19, no 90, p. 297-301.
-\bibitem{long-term} J. Moreira, A. Jorge, J. Sousa, C. Soares (2012). Comparing state-of-the-art regression methods for long term travel time prediction. Intelligent Data Analysis. 16. 10.3233/IDA-2012-0532. 
-\bibitem{long-term-2} G. Klunder, P. Baas, F. op de Beek. (2018). A long-term travel time prediction algorithm using historical data. 14th World Congress on Intelligent Transport Systems, ITS 2007; Beijing; China; October 2007 through 13 October 2007, 1191-1198
-\bibitem{should} Kirby, H. R., Watson, S. M., Dougherty, M. S. (1997). Should we use neural networks or statistical models for short-term motorway traffic forecasting?. International Journal of Forecasting, 13(1), 43-50.
+\bibitem{long-term} J. Moreira, A. Jorge, J. Sousa, C. Soares 2012. Comparing state-of-the-art regression methods for long term travel time prediction. Intelligent Data Analysis. 16. 10.3233/IDA-2012-0532. 
+\bibitem{long-term-2} G. Klunder, P. Baas, F. op de Beek. 2018. A long-term travel time prediction algorithm using historical data. 14th World Congress on Intelligent Transport Systems, ITS 2007; Beijing; China; October 2007 through 13 October 2007, 1191-1198
+\bibitem{should} Kirby, H. R., Watson, S. M., Dougherty, M. S. 1997. Should we use neural networks or statistical models for short-term motorway traffic forecasting?. International Journal of Forecasting, 13(1), 43-50.
 \bibitem{simple} Rice, J., Van Zwet, E. (2004). A simple and effective method for predicting travel times on freeways. IEEE Transactions on Intelligent Transportation Systems, 5(3), 200-207.
-\bibitem{dynamic-historic} Chien, S. I. J., Kuchipudi, C. M. (2003). Dynamic travel time prediction with real-time and historic data. Journal of transportation engineering, 129(6), 608-616.
-\bibitem{NN} Lee, Y. (2009, July). Freeway travel time forecast using artifical neural networks with cluster method. In Information Fusion, 2009. FUSION'09. 12th International Conference on (pp. 1331-1338). IEEE.
-\bibitem{peak-historic} Zhang, Y., Liu, Y. (2011). Analysis of peak and non‐peak traffic forecasts using combined models. Journal of Advanced Transportation, 45(1), 21-37.
-\bibitem{spectral1} Nicholson, H., Swann, C. D. (1974). The prediction of traffic flow volumes based on spectral analysis. Transportation Research, 8(6), 533-538.
-\bibitem{spectral2} Park, D., Rilett, L. R., Han, G. (1999). Spectral basis neural networks for real-time travel time forecasting. Journal of Transportation Engineering, 125(6), 515-523.
-
+\bibitem{dynamic-historic} Chien, S. I. J. et al. 2003. Dynamic travel time prediction with real-time and historic data. Journal of transportation engineering, 129(6), 608-616.
+\bibitem{NN} Lee, Y. 2009. Freeway travel time forecast using artifical neural networks with cluster method. In Information Fusion, 2009. FUSION'09. 12th International Conference on (pp. 1331-1338). IEEE.
+\bibitem{peak-historic} Zhang, Y. et al. 2011. Analysis of peak and non‐peak traffic forecasts using combined models. Journal of Advanced Transportation, 45(1).
+\bibitem{spectral1} Nicholson, H., Swann, C. D. 1974. The prediction of traffic flow volumes based on spectral analysis. Transportation Research, 8(6), 533-538.
+\bibitem{spectral2} Park, D. et al. 1999. Spectral basis neural networks for real-time travel time forecasting. Journal of Transportation Engineering, 125(6).
 \bibitem{williams} Williams, B., Durvasula, P., Brown, D. (1998). Urban freeway traffic flow prediction: application of seasonal autoregressive integrated moving average and exponential smoothing models. Transportation Research Record: Journal of the Transportation Research Board, (1644), 132-141.
 \bibitem{sun} Sun, H., Liu, H. X., Xiao, H., He, R. R., Ran, B. (2003, January). Short term traffic forecasting using the local linear regression model. In 82nd Annual Meeting of the Transportation Research Board, Washington, DC.
 \bibitem{zhong} Zhong, M., Sharma, S., Lingras, P. (2005). Refining genetically designed models for improved traffic prediction on rural roads. Transportation planning and technology, 28(3), 213-236.
