--- a/IEEE_Alvaro.tex
+++ b/IEEE_Alvaro.tex
@@ -31,8 +31,8 @@ Coventry, United Kingdom \\
 a.cabrejas-egea@warwick.ac.uk}
 \and
 \IEEEauthorblockN{Peter De Ford}
-\IEEEauthorblockA{\textit{McKinsey \& Company} \\
-\textit{\& Geospatial Department} \\
+\IEEEauthorblockA{\textit{Geospatial Department} \\
+\textit{McKinsey \& Company} \\
 	San Jose, Costa Rica \\
 	pdeford@outlook.com}
 \and
