--- a/IEEE_Alvaro.tex
+++ b/IEEE_Alvaro.tex
@@ -34,7 +34,7 @@ a.cabrejas-egea@warwick.ac.uk}
 \IEEEauthorblockA{\textit{Geospatial Department} \\
 \textit{McKinsey \& Company} \\
 	San Jose, Costa Rica \\
-	pdeford@outlook.com}
+	peter_de_ford@mckinsey.com}
 \and
 \IEEEauthorblockN{Colm Connaughton}
 \IEEEauthorblockA{\textit{Warwick Mathematics Institute} \\
